--- a/Views/Books/Delete.cshtml
+++ b/Views/Books/Delete.cshtml
@@ -1,39 +1,49 @@
 ﻿@model BookStoreApp.Models.Book
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Book";
 }
 
-<h1>Delete</h1>
+<div class="container my-5">
+    <div class="row justify-content-center">
+        <div class="col-lg-8">
+            <div class="card shadow border-danger rounded-4">
+                <div class="card-header bg-danger text-white rounded-top-4">
+                    <h4 class="mb-0">
+                        <i class="fas fa-exclamation-triangle me-2"></i>
+                        Confirm Delete
+                    </h4>
+                </div>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Book</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Author)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Author)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="BookId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> 
-        <a asp-action="Index" class="btn btn-secondary">Back to List</a>
-    </form>
+                <div class="card-body px-5 py-4">
+                    <p class="fs-5 text-center text-danger mb-4">
+                        Are you sure you want to permanently delete this book?
+                    </p>
+
+                    <dl class="row fs-5">
+                        <dt class="col-sm-3 text-muted"><i class="fas fa-heading me-1 text-danger"></i>Title</dt>
+                        <dd class="col-sm-9">@Html.DisplayFor(model => model.Title)</dd>
+
+                        <dt class="col-sm-3 text-muted"><i class="fas fa-user me-1 text-danger"></i>Author</dt>
+                        <dd class="col-sm-9">@Html.DisplayFor(model => model.Author)</dd>
+
+                        <dt class="col-sm-3 text-muted"><i class="fas fa-align-left me-1 text-danger"></i>Description</dt>
+                        <dd class="col-sm-9">@Html.DisplayFor(model => model.Description)</dd>
+                    </dl>
+                </div>
+
+                <div class="card-footer bg-light text-end rounded-bottom-4">
+                    <form asp-action="Delete" class="d-inline">
+                        <input type="hidden" asp-for="BookId" />
+                        <button type="submit" class="btn btn-danger px-4">
+                            <i class="fas fa-trash-alt me-1"></i> Delete
+                        </button>
+                    </form>
+                    <a asp-action="Index" class="btn btn-secondary ms-2 px-4">
+                        <i class="fas fa-arrow-left me-1"></i> Back to List
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
