--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,15 +7,20 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
 
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet" />
+
 
     <!-- Site-Specific CSS -->
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/BookStoreApp.styles.css" asp-append-version="true" />
 </head>
+
 <body>
     <!-- Header -->
     <header>
@@ -82,7 +87,7 @@
             <div class="row">
                 <!-- Section 1: Copyright Information -->
                 <div class="col-md-4 mb-3">
-                    <h5>2025 - Kitobhoi Rahimov</h5>
+                    <h5>2025 - Rahimov's Library</h5>
                     <h6 class="fst-italic"><br />Open a book, unlock a world of possibilities.<br /><br />Every page brings you closer to a better you.</h6>
                 </div>
 
@@ -116,5 +121,14 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script>
+        AOS.init({
+            once: true, // Animates only once when scrolling down
+            duration: 800, // Animation speed
+            offset: 80 // Distance to trigger
+        });
+    </script>
+
 </body>
 </html>
